@@ -1009,6 +1009,12 @@ reload_combine_recognize_const_pattern (rtx insn)
 	      && reg_state[clobbered_regno].real_store_ruid >= use_ruid)
 	    break;
 
+#ifdef HAVE_cc0
+	  /* Do not separate cc0 setter and cc0 user on HAVE_cc0 targets.  */
+	  if (must_move_add && sets_cc0_p (PATTERN (use_insn)))
+	    break;
+#endif
+
 	  gcc_assert (reg_state[regno].store_ruid <= use_ruid);
 	  /* Avoid moving a use of ADDREG past a point where it is stored.  */
 	  if (reg_state[REGNO (addreg)].store_ruid > use_ruid)
