@@ -1,3 +1,8 @@
+2011-01-26  Mikael Pettersson <mikpe@it.uu.se>
+
+	PR rtl-optimization/46856
+	* gcc.c-torture/compile/pr46856.c: New test.
+
 2011-01-26  Nicola Pero  <nicola.pero@meta-innovation.com>
 	    Andrew Pinski  <pinskia@gmail.com>
 
